# WordGame

./: .gitignore  index.html  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.ts
server/: Cargo.toml
server/src/: main.rs
src/: App.vue  core.ts  group.ts  main.ts  problem.ts  router.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/assets/: tailwind.css
src/components/: Button.vue  Input.vue  ProblemOverview.vue  ProblemView.vue
src/pages/: Admin.vue  Entry.vue  Game.vue  Judge.vue  JudgeEntry.vue
